--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet-async": "1.3.0",
     "react-redux": "8.1.1",
     "react-router-dom": "6.14.0",
+    "react-spinners": "^0.15.0",
     "use-immer": "^0.10.0"
   },
   "devDependencies": {
