--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-status-codes": "2.2.0",
     "immer": "^10.1.1",
     "leaflet": "1.7.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
@@ -33,6 +34,7 @@
     "@testing-library/user-event": "14.4.3",
     "@types/faker": "5.5.9",
     "@types/leaflet": "1.9.3",
+    "@types/lodash": "^4.17.13",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@types/react-redux": "7.1.25",
