--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
+    "@types/lodash.clonedeep": "^4.5.9",
+    "@types/lodash.isequal": "^4.5.8",
     "axios": "0.27.2",
     "classnames": "2.3.2",
     "clsx": "^2.1.1",
@@ -18,7 +20,8 @@
     "http-status-codes": "2.2.0",
     "immer": "^10.1.1",
     "leaflet": "1.7.1",
-    "lodash": "^4.17.21",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
@@ -34,7 +37,6 @@
     "@testing-library/user-event": "14.4.3",
     "@types/faker": "5.5.9",
     "@types/leaflet": "1.9.3",
-    "@types/lodash": "^4.17.13",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@types/react-redux": "7.1.25",
