--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "8.1.1",
     "react-router-dom": "6.14.0",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.2",
     "use-immer": "^0.10.0"
   },
   "devDependencies": {
